Moved rpi Docker files to /dev/docker

--- a/dev/docker/Dockerfile.rpi
+++ b/dev/docker/Dockerfile.rpi
@@ -12,13 +12,12 @@ ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US:en  
 ENV LC_ALL en_US.UTF-8 
 
-RUN rm -vfR /var/lib/apt/lists/*
+RUN rm -vfr /var/lib/apt/lists/*
 RUN apt-get -y update
 
 # system dependencies
 RUN apt-get -y install\
         git\
-        #mysql-server\
         nginx\
         python-software-properties\
         software-properties-common\
@@ -27,10 +26,8 @@ RUN apt-get -y install\
 
 # python requirement dependencies
 RUN apt-get -y install\
-        #python3.6\
         # dependencies for ansible's dependency module "cryptography"
         build-essential\
-        #libpython3.6-dev\
         libssl-dev\
         libffi-dev
 
@@ -38,7 +35,7 @@ RUN apt-get -y install\
 RUN curl https://www.python.org/ftp/python/3.6.0/Python-3.6.0.tgz -o Python-3.6.0.tgz -s && tar -xzvf Python-3.6.0.tgz
 RUN cd Python-3.6.0/ && ./configure && make -j 2 && make install
 
-RUN curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && python3.6 get-pip.py
+RUN curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py | python3.6 -
 RUN pip3 install virtualenv
 
 ENV venvs=/root/.virtualenvs
