Add first tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,7 @@ python:
 install:
   - "pip install -r requirements.txt"
   - "pip install flake8"
-script: flake8
+cache: pip
+script:
+  - flake8
+  - python -m unittest discover -p "*_test.py"
